[package]

name = "blist"
version = "0.0.2"
license = "MIT/Apache-2.0"
description = "A deque implemented as a hybrid linked-list-of-arrays"
authors = [
    "Alexis Beingessner <a.beingessner@gmail.com>",
]

repository = "https://github.com/contain-rs/blist"
homepage = "https://github.com/contain-rs/blist"
documentation = "https://contain-rs.github.io/blist/blist"
keywords = ["data-structures"]
readme = "README.md"

[dependencies]
traverse = "*"
linked-list = "*"
